[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[profile.dev]
opt-level = "s"
lto = "thin"
debug = 1

[workspace.dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
mlua = { version = "0.9.1", features = ["lua51", "module", "serialize"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
compact_str = { version = "0.7", features = ["serde"] }
bytes = "1"
fxhash = "0.2"
enumflags2 = "0.7.8"
once_cell = "1"
parking_lot = "0.12"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
immutable-chunkmap = { version = "2.0.2", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
anyhow = "1"
paste = "1"
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
simplelog = "0.12"
smallvec = { version = "1", features = ["const_generics", "union", "serde"] }
hdrhistogram = { version = "7" }
rand = { version = "0.8" }
humantime = { version = "2" }
regex = { version = "1" }
zstd = { version = "0.13" }

[workspace]
resolver = "2"
members = [
	"dcso3",
	"bflib",
	"bfdb",
	"bftools",
]
