# for actual release
[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

# for dev
#[profile.release]
#opt-level = 3
#lto = "thin"
#debug = false

[profile.dev]
opt-level = "s"
lto = "thin"
debug = 1

[workspace.dependencies]
anyhow = "1"
bytes = "1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
compact_str = { version = "0.7", features = ["serde"] }
enumflags2 = "0.7.8"
env_logger = "0.11.0"
fixedstr = { version = "0.5.5", features = ["serde"] }
fxhash = "0.2"
hdrhistogram = { version = "7" }
humantime = { version = "2" }
immutable-chunkmap = { version = "2.0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
log = "0.4.20"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
once_cell = "1"
parking_lot = "0.12"
paste = "1"
rand = { version = "0.8" }
regex = { version = "1" }
serde = "1"
serde_derive = "1"
serde_json = "1"
simplelog = "0.12"
smallvec = { version = "1", features = ["const_generics", "union", "serde"] }
tokio = { version = "1", features = ["full"] }
zstd = { version = "0.13" }

[workspace]
resolver = "2"
members = ["dcso3", "bflib", "bfdb"]
exclude = ["bftools"]
