# for actual release
[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

# for quick dev
# currently mlua only performs it's special linking steps on a release build
# so you can't use a debug build and get a usable dll. This profile will build
# a lot faster if you want to do iterative testing.
#[profile.release]
#opt-level = 3
#lto = "thin"
#debug = false

[workspace.dependencies]
anyhow = "1"
arcstr = { version = "1" }
arrayvec = { version = "0.7", features = ["serde"] }
base64 = { version = "0.22" }
bincode = { version = "1" }
bytes = "1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
compact_str = { version = "0.8", features = ["serde"] }
crossbeam = { version = "0.8" }
enumflags2 = "0.7.8"
env_logger = "0.11.0"
fixedstr = { version = "0.5.5", features = ["serde"] }
futures = { version = "0.3" }
fxhash = "0.2"
hdrhistogram = { version = "7" }
humantime = { version = "2" }
immutable-chunkmap = { version = "2.0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
log = "0.4.20"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
netidx-protocols = { version = "0.26" }
netidx = { version = "0.26" }
once_cell = "1"
parking_lot = "0.12"
paste = "1"
pin-project = { version = "1" }
rand = { version = "0.8" }
regex = { version = "1" }
serde_derive = "1"
serde_json = "1"
serde = { version = "1", features = ["rc"] }
simplelog = "0.12"
sled = { version = "0.34" }
smallvec = { version = "1", features = ["const_generics", "union", "serde"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
warp = "0.3"
zstd = { version = "0.13" }

[workspace]
resolver = "2"
members = ["dcso3", "bflib", "bfdb", "bfprotocols", "sled-typed"]
exclude = ["bftools"]
