[package]
name = "bfdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.8", features = ["lua51", "serialize"] }
bfprotocols = { version = "0.1.0", path = "../bfprotocols" }
dcso3 = { version = "0.1", path = "../dcso3" }
sled-typed = { version = "0.1", path = "../sled-typed" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
compact_str = { workspace = true }
bytes = { workspace = true }
fxhash = { workspace = true }
enumflags2 = { workspace = true }
sled = { workspace = true }
smallvec = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
paste = { workspace = true }
arrayvec = { workspace = true }
bincode = { workspace = true }
pin-project = { workspace = true }
