[package]
name = "bflib"
version = "0.1.0"
edition = "2021"

[lib]
name = "bflib"
crate-type = ["cdylib"]

[dependencies]
dcso3 = { version = "0.1", path = "../dcso3" }
chrono = { workspace = true }
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
compact_str = { workspace = true }
bytes = { workspace = true }
fxhash = { workspace = true }
enumflags2 = { workspace = true, features = ["serde"] }
once_cell = { workspace = true }
parking_lot = { workspace = true }
nalgebra = { workspace = true }
immutable-chunkmap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
simplelog = { workspace = true }
paste = { workspace = true }
smallvec = { workspace = true }
indexmap = { workspace = true }
hdrhistogram = { workspace = true }
rand = { workspace = true }
humantime = { workspace = true }
regex = { workspace = true }
