[package]
name = "bflib"
version = "0.1.0"
edition = "2021"

[lib]
name = "bflib"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
bfprotocols = { version = "0.1", path = "../bfprotocols" }
bytes = { workspace = true }
chrono = { workspace = true }
compact_str = { workspace = true }
crossbeam = { workspace = true }
dcso3 = { version = "0.1", path = "../dcso3", features = ["perf"] }
enumflags2 = { workspace = true, features = ["serde"] }
futures = { workspace = true }
fxhash = { workspace = true }
hdrhistogram = { workspace = true }
humantime = { workspace = true }
immutable-chunkmap = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
mlua = { version = "0.9.9", features = ["lua51", "module", "serialize"] }
nalgebra = { workspace = true }
netidx = { workspace = true }
netidx-protocols = { workspace = true }
netidx-archive = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
simplelog = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }
zstd = { workspace = true }
