[package]
name = "bfprotocols"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
compact_str = { workspace = true }
dcso3 = { version = "0.1", path = "../dcso3" }
enumflags2 = { workspace = true }
fxhash = { workspace = true }
hdrhistogram = { workspace = true }
immutable-chunkmap = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
mlua = { version = "0.9.8", features = ["lua51", "serialize"] }
netidx = { workspace = true }
paste = { workspace = true }
regex = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
