[package]
name = "bftools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dcso3 = { version = "0.1", path = "../dcso3" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
zip = "0.6.6"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.0"
log.workspace = true
mlua.workspace = true
rlua = "0.19.8"
walkdir = "2.4.0"
rlua_serde = "0.4.0"
