[package]
name = "bftools"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[[bin]]
name = "bftools"

[dependencies]
anyhow = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
zip = "0.6.6"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.0"
log = "0.4.20"
mlua = { version = "0.9.9", features = [ "lua51", "serialize", "vendored" ] }
walkdir = "2.4.0"
dcso3 = { version = "0.1", path = "../dcso3" }
compact_str = { version = "0.8", features = ["serde"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
