[package]
name = "dcso3"
version = "0.1.5"
edition = "2021"
authors = ["Eric Stokes <eestokes@pm.me>"]
license = "MIT"
description = "Minimal Rust binding to the DCS lua api"
homepage = "https://github.com/estokes/bfnext"
repository = "https://github.com/estokes/bfnext"
documentation = "https://docs.rs/dcso3"
readme = "README.md"
keywords = ["DCS", "gamedev"]
categories = ["api-bindings", "game-development"]

[dependencies]
mlua = { path = "../../mlua", version = "0.9.1", features = ["lua51", "serialize"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
compact_str = { workspace = true }
fxhash = { workspace = true }
enumflags2 = { workspace = true }
nalgebra = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
anyhow = { workspace = true }
fixedstr = { workspace = true }
