[package]
name = "dcso3"
version = "0.1.10"
edition = "2021"
authors = ["Eric Stokes <eestokes@pm.me>"]
license = "MIT"
description = "Minimal Rust binding to the DCS lua api"
homepage = "https://github.com/estokes/bfnext"
repository = "https://github.com/estokes/bfnext"
documentation = "https://estokes.github.io/bfnext/dcso3/dcso3"
readme = "README.md"
keywords = ["DCS", "gamedev"]
categories = ["api-bindings", "game-development"]

[features]
default = []
perf = []

[dependencies]
mlua = { version = "0.9.9", features = ["lua51", "serialize"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
compact_str = { workspace = true }
fxhash = { workspace = true }
enumflags2 = { workspace = true }
nalgebra = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
anyhow = { workspace = true }
fixedstr = { workspace = true }
hdrhistogram = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
